cgdb-0.8.0 (01/16/2022)

  * Fix issue #298 - CGDB now exits when gdb exits
    Previously if gdb exited but the inferior, or child of the inferior
    was still running, cgdb would possibly continue running in a
    non responsive state. Now cgdb exits when gdb does.

  * Fix issue #278, Single stepping through disassembly without debug
    symbols does not move arrow in source window. Now the arrow moves in
    the source window as expected.

  * Fix issue #135 CGDB freezes when pressing "o" to open the file dialog
    Previously, if you attempted to open the file dialog, cgdb would 
    sometimes hang, due to a gdbwire parsing bug from the gdb response.
    This has been resolved.

  * Fix issue #152, breakpoint handling is broken in disasembly view
    Previously, if you set a breakpoint in the source view, it would not
    be reflected in the disassembly view, and vice versa. Now if you set
    a breakpoint in either view, it should be reflected in the other.

  * Fix issue #260, CGDB would not process commands after F5, F6, etc
    If F5, F6, F7, F8, F10 were hit, CGDB would no longer process GDB
    commands, like setting breakpoints, etc. Now CGDB works as expected.

  * CGDB implements a virtual terminal in the GDB window
    - The GDB scroller is now a virtual terminal (using libvterm)
    - The scrollback buffer has been reimplemented using libvterm
      The cursor row/col position is now known, rather than just the row
    - Searching in the scrollback buffer is improved
    - The scrollback buffer size is configurable with a new option,
      scrollbackbuffersize (sbbs) and is defaulted to 10000.
    - Mark commands in the GDB scroller have been removed
    - Unicode is now fully supported in the gdb window
    - libvterm does not support reflow yet, so resizing the terminal or
      switching the window orientation (winsplitorientation) after startup
      may cause the text in the GDB window to not be as expected